# midiutils

./: README.md  pyproject.toml
src/midiutils/: midi_preprocessor.py  types.py
src/midiutils.egg-info/: PKG-INFO  SOURCES.txt
tests/: test_midi_preprocessor.py
