[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "midiutils"
version = "0.0.1"
dependencies = ["mido==1.3.2"]
requires-python = ">=3.10,<3.11"

[project.optional-dependencies]
dev = ["ruff", "pytest"]

# run the project with:
# midi2vid --source_path=file.midi --output_path=out.mp4 --config default.json
# [project.scripts]
# midi2vid = "midi2vid.main:commandline_main"

[tool.ruff]
select = [
    "E", # errors
    "F", # pyflakes
    "B", # flake8-bugbear
    "I", # imports
    "N", # names
    # "D", # docstrings
]
line-length = 80
indent-width = 2

[tool.pyright]
venvPath = "."
venv = ".venv"
typeCheckingMode = "strict"
reportMissingTypeStubs = false
